--- a/app/src/main/res/xml/preferences_tracks.xml
+++ b/app/src/main/res/xml/preferences_tracks.xml
@@ -32,7 +32,9 @@
         android:defaultValue="1"
         android:entryValues="@array/location_accuracy_val"
         android:key="tracks_location_source"
-        android:title="@string/pref_location_accuracy"/>
+        android:title="@string/pref_location_accuracy"
+        android:singleLineTitle="false"
+        />
 
     <ListPreference
         app:iconSpaceReserved="false"
@@ -41,7 +43,9 @@
         android:entries="@array/tracker_min_time_between_updates"
         android:entryValues="@array/tracker_min_time_between_updates_val"
         android:key="tracks_min_time"
-        android:title="@string/pref_min_time"/>
+        android:title="@string/pref_min_time"
+        android:singleLineTitle="false"
+        />
 
     <ListPreference
         app:iconSpaceReserved="false"
@@ -50,13 +54,17 @@
         android:entries="@array/tracker_min_dist_update"
         android:entryValues="@array/tracker_min_dist_update_val"
         android:key="tracks_min_distance"
-        android:title="@string/pref_min_distance"/>
+        android:title="@string/pref_min_distance"
+        android:singleLineTitle="false"
+        />
 
     <CheckBoxPreference
         app:iconSpaceReserved="false"
         android:defaultValue="false"
         android:key="track_restore"
-        android:title="@string/track_restore"/>
+        android:title="@string/track_restore"
+        android:singleLineTitle="false"
+        />
 
     <CheckBoxPreference
         app:iconSpaceReserved="false"
@@ -65,6 +73,7 @@
         android:enabled="false"
         android:key="track_send"
         android:title="@string/track_send"
+        android:singleLineTitle="false"
         />
 
 
@@ -73,6 +82,7 @@
         android:key="track_uid_custom"
         android:title=""
         android:summary="Click the icon to copy text"
+        android:singleLineTitle="false"
         />
 
 
