--- a/app/src/main/res/layout/fragment_map_tab.xml
+++ b/app/src/main/res/layout/fragment_map_tab.xml
@@ -29,6 +29,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <org.maplibre.android.maps.MapView
+        android:id="@+id/mapViewMaplibre"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <FrameLayout
         android:id="@+id/fl_compass"
         android:layout_width="64dp"
