--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -19,9 +19,15 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
-
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/intro"
@@ -72,3 +78,4 @@
             android:textColor="@color/color_white"/>
     </LinearLayout>
 </LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
