--- a/app/src/main/res/layout/activity_new_layer.xml
+++ b/app/src/main/res/layout/activity_new_layer.xml
@@ -18,11 +18,19 @@
   ~ You should have received a copy of the GNU Lesser General Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+<FrameLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
+
 
     <include layout="@layout/actionbar"/>
 
@@ -92,3 +100,4 @@
     </LinearLayout>
 
 </FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
